Fixed alignment der Login und Register Seite

--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@
 .authenticate input[type="text"],
 .authenticate input[type="password"],
 .authenticate input[type="submit"] {
-    width: calc(100% - 22px);
+    width: 100%;
     margin-bottom: 10px;
     padding: 10px;
     border: 1px solid #ccc;
